# iasked-bot

./: .env_template  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  Secrets_template.toml  bot.js  discord.py  docker-compose.yml  main.py
src/: main.rs
