[package]
name = "iasked-bot"
version = "0.1.0"
authors = ["Lucas Placentino <lucas@placentino.be>"]

[dependencies]
#serenity = { path = "../../", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
#tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
