[package]
name = "iasked-bot"
version = "0.1.0"
authors = ["Lucas Placentino <lucas@placentino.be>"]
edition = "2021"

[dependencies]
#serenity = { path = "../../", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
#tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
#serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
#tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.66"
shuttle-serenity = { version = "0.17.0" }
shuttle-runtime = { version = "0.17.0" }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
shuttle-secrets = "0.17.0"
tokio = { version = "1.26.0" }
tracing = "0.1.37"
rand = "0.8"